force-app/main/default/objects/Loan__c/Loan__c.object-meta.xml
<CustomObject>
    <label>Loan</label>
    <pluralLabel>Loans</pluralLabel>
    <nameField>
        <label>Loan Number</label>
        <type>AutoNumber</type>
        <displayFormat>LN-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>The loan record being audited. Contains loan-level data snapshotted at audit creation time. Distinct from the origination Loan_Application__c.</description>
</CustomObject>