force-app/main/default/objects/Loan__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Original approval date. Drives policy version resolution (FR-26).</description>
</CustomField>