force-app/main/default/objects/Loan__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <label>Approver Name</label>
    <type>Text</type>
    <length>255</length>
    <description>Loan officer who approved</description>
</CustomField>