force-app/main/default/objects/Loan__c/fields/Borrower_Name__c.field-meta.xml
<CustomField>
    <fullName>Borrower_Name__c</fullName>
    <label>Borrower Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Borrower full name</description>
</CustomField>