force-app/main/default/objects/Loan__c/fields/DTI_At_Approval__c.field-meta.xml
<CustomField>
    <fullName>DTI_At_Approval__c</fullName>
    <label>DTI at Approval</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>DTI ratio at time of approval</description>
</CustomField>