force-app/main/default/objects/Loan__c/fields/FICO_At_Approval__c.field-meta.xml
<CustomField>
    <fullName>FICO_At_Approval__c</fullName>
    <label>FICO at Approval</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>FICO score at time of approval</description>
</CustomField>