force-app/main/default/objects/Loan__c/fields/Identity_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Verification_Status__c</fullName>
    <label>Identity Verification Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>KYC / CIP identity verification state for the loan's primary party. Gating precondition (ADR-24): only Verified passes to the kernel. Defaults to Not_Started.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not_Started</fullName><default>true</default><label>Not Started</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
            <value><fullName>Verified</fullName><default>false</default><label>Verified</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Manual_Review</fullName><default>false</default><label>Manual Review</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>