force-app/main/default/objects/Loan__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Product type</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Conventional</fullName><default>false</default><label>Conventional</label></value>
            <value><fullName>FHA</fullName><default>false</default><label>FHA</label></value>
            <value><fullName>VA</fullName><default>false</default><label>VA</label></value>
            <value><fullName>USDA</fullName><default>false</default><label>USDA</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>