force-app/main/default/objects/Loan__c/fields/LOS_Loan_Id__c.field-meta.xml
<CustomField>
    <fullName>LOS_Loan_Id__c</fullName>
    <label>LOS Loan ID</label>
    <type>Text</type>
    <length>50</length>
    <description>External loan ID from LOS (future integration)</description>
</CustomField>