force-app/main/default/objects/Loan__c/fields/LTV_At_Approval__c.field-meta.xml
<CustomField>
    <fullName>LTV_At_Approval__c</fullName>
    <label>LTV at Approval</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>4</scale>
    <description>LTV ratio at time of approval</description>
</CustomField>