force-app/main/default/objects/Loan__c/fields/Originating_Branch__c.field-meta.xml
<CustomField>
    <fullName>Originating_Branch__c</fullName>
    <label>Originating Branch</label>
    <type>Text</type>
    <length>100</length>
    <description>Branch that originated the loan</description>
</CustomField>