force-app/main/default/objects/Loan__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Loan purpose</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Purchase</fullName><default>false</default><label>Purchase</label></value>
            <value><fullName>Refinance</fullName><default>false</default><label>Refinance</label></value>
            <value><fullName>Cash_Out_Refi</fullName><default>false</default><label>Cash-Out Refi</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>