force-app/main/default/objects/Loan__c/fields/Source_Application__c.field-meta.xml
<CustomField>
    <fullName>Source_Application__c</fullName>
    <label>Source Application</label>
    <type>Lookup</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipName>Loans</relationshipName>
    <relationshipLabel>Loans</relationshipLabel>
    <description>Link back to origination record if available</description>
</CustomField>