force-app/main/default/objects/Loan__c/fields/SSN_Last_Four__c.field-meta.xml
<CustomField>
    <fullName>SSN_Last_Four__c</fullName>
    <label>SSN Last Four</label>
    <type>Text</type>
    <length>4</length>
    <description>Last four digits only, for display/verification (e.g. ••• •• 1234). Last-four alone is not a reportable SSN. Never written to any immutable, snapshot, or Agentforce payload (ADR-24).</description>
</CustomField>