force-app/main/default/objects/Loan__c/fields/SSN_Token__c.field-meta.xml
<CustomField>
    <fullName>SSN_Token__c</fullName>
    <label>SSN Token</label>
    <type>Text</type>
    <length>255</length>
    <description>Opaque token returned by the EXTERNAL SSN vault. NOT the SSN and meaningless without the vault. Raw SSN is never stored in Salesforce (ADR-24). At-rest encryption of this token is pending OQ-R8-7 (Security).</description>
</CustomField>